parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@class.py-18.snap
---
source: parser/src/lexer/lexer.rs
description: "class a[T: U, V: W, **X]: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
[
    Token {
        kind: Class,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "T",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: Colon,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "U",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: Comma,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "V",
        ),
        start: 14,
        end: 15,
    },
    Token {
        kind: Colon,
        value: None,
        start: 15,
        end: 16,
    },
    Token {
        kind: Identifier,
        value: Str(
            "W",
        ),
        start: 17,
        end: 18,
    },
    Token {
        kind: Comma,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Pow,
        value: None,
        start: 20,
        end: 22,
    },
    Token {
        kind: Identifier,
        value: Str(
            "X",
        ),
        start: 22,
        end: 23,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: Colon,
        value: None,
        start: 24,
        end: 25,
    },
    Token {
        kind: Pass,
        value: None,
        start: 26,
        end: 30,
    },
]
