parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@class.py-2.snap
---
source: parser/src/lexer/lexer.rs
description: "class a():\n    pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
[
    Token {
        kind: Class,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Colon,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 11,
        end: 15,
    },
    Token {
        kind: Pass,
        value: None,
        start: 15,
        end: 19,
    },
]
