parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@class.py-5.snap
---
source: parser/src/lexer/mod.rs
description: "class a(b,\nc,\nd): pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
[
    Token {
        kind: Class,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: Comma,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: Comma,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "d",
        ),
        start: 14,
        end: 15,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 15,
        end: 16,
    },
    Token {
        kind: Colon,
        value: None,
        start: 16,
        end: 17,
    },
    Token {
        kind: Pass,
        value: None,
        start: 18,
        end: 22,
    },
]
