parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@class.py-9.snap
---
source: parser/src/lexer/lexer.rs
description: "class a[T: U]: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
[
    Token {
        kind: Class,
        value: None,
        start: 0,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 6,
        end: 7,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "T",
        ),
        start: 8,
        end: 9,
    },
    Token {
        kind: Colon,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "U",
        ),
        start: 11,
        end: 12,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Colon,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: Pass,
        value: None,
        start: 15,
        end: 19,
    },
]
